--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,35 +1,47 @@
-body {
-    font-family: 'Nunito', sans-serif;
-    padding: 0;
+* {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-main {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgb(247, 250, 252);
+html {
+    scroll-behavior: smooth;
 }
 
-.welcome-text {
-    color: #f75454;
-    font-weight: 600;
-    font-size: 2rem;
+body {
+    font-family: var(--font), sans-serif !important;
+    font-weight: var(--font-regular) !important;
+    color: var(--app-black) !important;
     -webkit-font-smoothing: antialiased;
-    padding: 100px;
-    border: 5px solid #f75454;
+    -moz-osx-font-smoothing: grayscale;
+    scroll-behavior: smooth;
 }
 
-.welcome-text > span {
-    font-size: 2.1rem;
-    text-shadow: 3px 3px #fbbcbc;
+ul,
+li {
+    text-decoration: none;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
-.small-welcome-text {
-    color: #f75454;
-    font-size: 0.5rem;
-    font-weight: bold;
-    margin-left: 6px;
-    margin-bottom: 1px;
+.btn:focus,
+textarea:focus,
+textarea.form-control:focus,
+input.form-control:focus,
+input[type=text]:focus,
+input[type=password]:focus,
+input[type=email]:focus,
+input[type=number]:focus,
+[type=text].form-control:focus,
+[type=password].form-control:focus,
+[type=email].form-control:focus,
+[type=tel].form-control:focus,
+[contenteditable].form-control:focus {
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+.app-active-link {
+    background-color: var(--app-blue);
 }
