--- a/resources/css/variable.css
+++ b/resources/css/variable.css
@@ -9,4 +9,10 @@
     --app-red: #ff556a;
     --app-blue: #739dd8;
     --app-white: #ffffff;
+    --app-grey: #787a7f;
+    --12px: 0.75rem;
+    --14px: 0.875rem;
+    --16px: 1rem;
+    --18px: 1.124rem;
+    --20px: 1.25rem;
 }
