feat(fe): about page

--- a/resources/css/variable.css
+++ b/resources/css/variable.css
@@ -10,6 +10,7 @@
     --app-blue: #739dd8;
     --app-white: #ffffff;
     --app-grey: #787a7f;
+    --app-light-grey: #c0c3ca;
     --12px: 0.75rem;
     --14px: 0.875rem;
     --16px: 1rem;
