--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31,6 +31,13 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     scroll-behavior: smooth;
+    min-height: 100vh;
+}
+
+#root {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 ul,
@@ -63,5 +70,12 @@ input[type=number]:focus,
     color: var(--app-white) !important;
     border-radius: 6px;
     transition: all 0.3s ease-in-out;
+}
+
+.app-divide {
+    width: 100%;
+    height: 3px;
+    background-color: var(--app-light-grey);
+    border-radius: 4px;
 }
 
