--- a/resources/css/components/card_product.css
+++ b/resources/css/components/card_product.css
@@ -1,5 +1,45 @@
 #app-card-product .card-img-top {
+    max-width: 100%;
     width: 100%;
-    height: 20vw;
+    height: auto;
     object-fit: cover;
+}
+
+#app-card-product .card-image {
+    position: relative;
+    overflow: hidden;
+}
+
+#app-card-product .card-image .card-image-layout {
+    max-width: 100%;
+    padding-top: 130%;
+    display: block;
+    margin: 0 auto;
+    position: relative;
+    text-decoration: none;
+    background-color: transparent;
+}
+
+#app-card-product .card-image .card-image-layout::before {
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+}
+
+#app-card-product .card-image .card-image-layout img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    max-width: 100%;
+    border: 0;
+    vertical-align: middle;
 }
