feat(fe): cart page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -52,14 +52,14 @@ li {
 textarea:focus,
 textarea.form-control:focus,
 input.form-control:focus,
-input[type=text]:focus,
-input[type=password]:focus,
-input[type=email]:focus,
-input[type=number]:focus,
-[type=text].form-control:focus,
-[type=password].form-control:focus,
-[type=email].form-control:focus,
-[type=tel].form-control:focus,
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus,
+input[type="number"]:focus,
+[type="text"].form-control:focus,
+[type="password"].form-control:focus,
+[type="email"].form-control:focus,
+[type="tel"].form-control:focus,
 [contenteditable].form-control:focus {
     outline: none !important;
     box-shadow: none !important;
@@ -101,8 +101,17 @@ input[type=number]:focus,
     color: var(--app-grey);
 }
 
+/* Border Radius */
+.app-border-8px {
+    border-radius: 8px;
+}
+
 @media (min-width: 1200px) {
-    .container, .container-lg, .container-md, .container-sm, .container-xl {
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl {
         max-width: 1300px;
     }
 }
