--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,15 +1,17 @@
 /* Bootstrap */
-@import './bootstrap.min.css';
+@import "./bootstrap.min.css";
 
 /* Global CSS */
-@import './variable.css';
-@import './font.css';
-@import './app.css';
-@import './color.css';
-@import './typography.css';
+@import "./variable.css";
+@import "./font.css";
+@import "./app.css";
+@import "./color.css";
+@import "./typography.css";
 
 /* CSS of components */
-@import 'components/card_product.css';
+@import "components/card_product.css";
+@import "components/cart_list.css";
+@import "components/control_quantity.css";
 
 .form-check-label:before {
     background-color: red;
