--- a/resources/css/color.css
+++ b/resources/css/color.css
@@ -18,6 +18,10 @@
     color: var(--app-grey);
 }
 
+.bg-blue {
+    background-color: var(--app-blue);
+}
+
 .bg-blue-no-active {
     transition: all 0.4s ease-in-out;
 }
@@ -37,12 +41,19 @@
     border-color: var(--app-blue);
 }
 
+.btn-grey {
+    color: var(--app-white);
+    background-color: var(--app-grey);
+    border-color: var(--app-grey);
+}
+
 .btn-link,
 .btn-link:hover {
     color: var(--app-blue);
     text-decoration: none;
 }
 
-.btn:hover.btn-blue {
+.btn:hover.btn-blue,
+.btn:hover.btn-grey {
     color: var(--app-white);
 }
