--- a/public/css/app.css
+++ b/public/css/app.css
@@ -72,6 +72,16 @@ input[type="number"]:focus,
     transition: all 0.3s ease-in-out;
 }
 
+.app-not-active-link {
+    transition: all 0.3s ease-in-out;
+}
+
+.app-not-active-link:hover {
+    background-color: var(--app-blue);
+    color: var(--app-white) !important;
+    border-radius: 6px;
+}
+
 .app-divide {
     width: 100%;
     height: 3px;
