--- a/public/css/app.css
+++ b/public/css/app.css
@@ -56,6 +56,7 @@ input[type="text"]:focus,
 input[type="password"]:focus,
 input[type="email"]:focus,
 input[type="number"]:focus,
+select:focus,
 [type="text"].form-control:focus,
 [type="password"].form-control:focus,
 [type="email"].form-control:focus,
@@ -87,6 +88,18 @@ input[type="number"]:focus,
     height: 3px;
     background-color: var(--app-light-grey);
     border-radius: 4px;
+}
+
+.app-divide-2 {
+    width: 100%;
+    height: 2px;
+    background-color: var(--app-blue);
+    border-radius: 4px;
+}
+
+.app-border-right {
+    height: auto;
+    border-right: 1px solid var(--app-black);
 }
 
 .pagination .page-item {
