--- a/resources/css/color.css
+++ b/resources/css/color.css
@@ -22,6 +22,10 @@
     background-color: var(--app-blue);
 }
 
+.bg-light-blue {
+    background-color: var(--app-light-blue);
+}
+
 .bg-blue-no-active {
     transition: all 0.4s ease-in-out;
 }
