--- a/resources/css/components/control_quantity.css
+++ b/resources/css/components/control_quantity.css
@@ -4,6 +4,8 @@
     line-height: 1.5;
     background-color: var(--app-light-grey-2);
     user-select: none;
+    width: 100%;
+    text-align: center;
 }
 
 #app-control-quantity .btn.btn-grey.btn-sm {
