--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -66,6 +66,21 @@ select:focus,
     box-shadow: none !important;
 }
 
+.custom-control-input:checked ~ .custom-control-label::before {
+    background-color: var(--app-blue);
+    border-color: var(--app-blue);
+}
+
+.custom-checkbox
+    .custom-control-input:checked:focus
+    ~ .custom-control-label::before {
+    box-shadow: none;
+}
+
+.custom-checkbox .custom-control-input:focus ~ .custom-control-label::before {
+    box-shadow: none;
+}
+
 .app-active-link {
     background-color: var(--app-blue);
     color: var(--app-white) !important;
