fix(fe): fix layout Home Shop Product Page

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,3 +14,4 @@
 @import "components/control_quantity.css";
 @import "components/product_information.css";
 @import "components/text_field.css";
+@import "components/skeleton.css";
