--- a/resources/css/components/card_product.css
+++ b/resources/css/components/card_product.css
@@ -10,6 +10,21 @@
     overflow: hidden;
 }
 
+#app-card-product .card-title {
+    word-break: break-all;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
+    transition: color 0.4s ease-in;
+}
+
+#app-card-product:hover .card-title {
+    color: var(--app-blue);
+}
+
 #app-card-product .card-image .card-image-layout {
     max-width: 100%;
     padding-top: 130%;
