--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,3 +15,4 @@
 @import "components/product_information.css";
 @import "components/text_field.css";
 @import "components/skeleton.css";
+@import "components/drawer.css";
