--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,6 +7,10 @@
 @import "./app.css";
 @import "./color.css";
 @import "./typography.css";
+@import "./media.css";
+@import "./scroll_bar.css";
+@import "./input.css";
+@import "./custom_bootstrap.css";
 
 /* CSS of components */
 @import "components/card_product.css";
