--- a/resources/css/variable.css
+++ b/resources/css/variable.css
@@ -15,6 +15,7 @@
     --app-light-grey-3: #ced4da;
     --app-light-blue: rgba(239, 244, 251, 0.91);
     --bootstrap-light: #f8f9fa;
+    --bootstrap-color-divide: #dee2e6;
     --12px: 0.75rem;
     --14px: 0.875rem;
     --16px: 1rem;
