--- a/resources/css/media.css
+++ b/resources/css/media.css
@@ -14,7 +14,8 @@
     }
 
     #app-menu-header {
-        display: block;
+        display: flex;
+        align-items: center;
     }
 }
 
@@ -29,6 +30,12 @@
 
     .app-filter-button-shop {
         display: block;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .product-filter-rating-star {
+        --columns: 3;
     }
 }
 
@@ -55,6 +62,10 @@
 }
 
 @media only screen and (max-width: 400px) {
+    .product-filter-rating-star {
+        --columns: 2;
+    }
+
     .container,
     .container-fluid,
     .container-lg,
@@ -72,5 +83,11 @@
 
     .navbar {
         padding: 0.5rem 0.25rem;
+    }
+
+    .product-column-image,
+    .product-column-information {
+        flex: 0 0 100%;
+        max-width: 100%;
     }
 }
