--- a/resources/css/components/cart_list.css
+++ b/resources/css/components/cart_list.css
@@ -27,7 +27,6 @@ table#app-cart-list {
 
 tbody {
     display: block;
-    height: 286px;
     overflow: auto;
 }
 
@@ -36,4 +35,16 @@ tbody tr {
     display: table;
     width: 100%;
     table-layout: fixed;
+}
+
+tbody tr td a {
+    color: inherit;
+}
+
+tbody tr td a:hover p.cart-title {
+    color: var(--app-blue);
+}
+
+tbody tr td a:hover p.author_name {
+    color: var(--app-black);
 }
